k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-service
  labels:
    app: board-service
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: board-service
